tests/compile_fail/updates_incompatible_root_type.stderr
error: expected `::`, found `:`
 --> tests/compile_fail/updates_incompatible_root_type.rs:3:20
  |
3 | use tnuctipun::path:Path;
  |                    ^
  |
  = note: import paths are delimited using `::`
help: use double colon
  |
3 | use tnuctipun::path::Path;
  |                     +

error[E0308]: mismatched types
  --> tests/compile_fail/updates_incompatible_root_type.rs:36:17
   |
36 |         |_path| address_city_path, // This path has Root=Company, but builder expects Root=User
   |                 ^^^^^^^^^^^^^^^^^ expected `Path<_, _, User>`, found `Path<City, Address, Company>`
   |
   = note: expected struct `tnuctipun::Path<_, _, User>`
              found struct `tnuctipun::Path<City, Address, Company>`
